--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,134 @@
 /* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */
+@import "./app/shared/shared";
+
+@font-face {
+  font-family: "Satoshi";
+  src: local(Satoshi-Regular),
+    url("./assets/fonts/Satoshi-Regular.woff2") format("woff2"),
+    url("./assets/fonts/Satoshi-Regular.woff") format("woff"),
+    url("./assets/fonts/Satoshi-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-display: block;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Satoshi";
+  src: local(Satoshi-Medium),
+    url("./assets/fonts/Satoshi-Medium.woff2") format("woff2"),
+    url("./assets/fonts/Satoshi-Medium.woff") format("woff"),
+    url("./assets/fonts/Satoshi-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-display: block;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Satoshi";
+  src: local(Satoshi-Bold),
+    url("./assets/fonts/Satoshi-Bold.woff2") format("woff2"),
+    url("./assets/fonts/Satoshi-Bold.woff") format("woff"),
+    url("./assets/fonts/Satoshi-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-display: block;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Satoshi";
+  src: local(Satoshi-Black),
+    url("./assets/fonts/Satoshi-Black.woff2") format("woff2"),
+    url("./assets/fonts/Satoshi-Black.woff") format("woff"),
+    url("./assets/fonts/Satoshi-Black.ttf") format("truetype");
+  font-weight: 900;
+  font-display: swap;
+  font-style: normal;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+
+  &:focus {
+    outline: none;
+  }
+
+  a {
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  button {
+    font-family: "Satoshi", sans-serif;
+    cursor: pointer;
+    border: none;
+  }
+}
+
+:root {
+  --main-color: #fff;
+  --main-green: #f0ffe0;
+  --green-10: #c3ef7e;
+  --main-brown: #313131;
+  --main-black: #222;
+  --main-blue: #3341ff;
+  --main-font: "Satoshi", sans-serif;
+  --brown-20: rgba(49, 49, 49, 0.8);
+  --black-80: #aeb5bc;
+  --black-90: #dbdee1;
+  --black-100: #fdfdfe;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  min-width: toRem(280);
+  background-color: var(--main-green);
+  font-family: var(--main-font);
+  font-weight: 400;
+  color: var(--main-brown);
+  @include custom-scrollbar();
+}
+
+.noscroll {
+  overflow: hidden;
+}
+
+main {
+  width: 100%;
+  height: 100%;
+  padding: toRem(96 + 16) toRem(16) toRem(32);
+
+  @media (min-width: $lg) {
+    padding: toRem(104 + 16) toRem(80) toRem(48);
+  }
+  @media (min-width: $two-xl) {
+    padding: toRem(104 + 16) toRem(101) toRem(48);
+  }
+}
+
+img[alt] {
+  position: relative;
+
+  &::after {
+    box-sizing: border-box;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: inherit;
+    font-family: var(--main-font);
+    content: "";
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 500;
+    width: 100%;
+    height: 100%;
+    padding: 1rem;
+  }
+}
