--- a/src/app/three/game/game.component.scss
+++ b/src/app/three/game/game.component.scss
@@ -1,10 +1,14 @@
 @import "./../../shared/shared";
 
 :host {
-  @include centered();
+  width: 100%;
+  min-height: 100%;
+  @include column-between();
+  gap: toRem(32);
 }
 
 .puzzle {
+  align-self: center;
   position: relative;
   width: calc(100vw - toRem(32));
   height: calc(100vw - toRem(32));
@@ -16,6 +20,8 @@
   box-shadow: inset 2px 2px 3px 3px rgb(0 0 0 / 20%),
     inset 0 0 4px 4px rgb(0 0 0 / 20%), 5px 5px 10px 10px rgb(0 0 0 / 40%);
   overflow: hidden;
+  min-width: toRem(232);
+  min-height: toRem(232);
 
   &.height {
     width: calc(100vh - toRem(96 + 32));
@@ -65,12 +71,10 @@
   width: 100%;
   height: 100%;
   border-radius: toRem(4);
-  background-color: #0000;
   grid-row: 1;
   grid-column: 1;
-  transition: all 0.3s ease-out;
-  box-shadow: 2px 2px 5px 5px rgb(0 0 0 / 30%);
-  padding: 0.05rem;
+  @include transition(transform, 0.3s);
+  padding: 0.075rem;
   @include centered();
 
   &::before {
@@ -100,6 +104,7 @@
 }
 
 .pic-container {
+  background-color: #f5f5f5;
   position: relative;
   width: 100%;
   height: 100%;
@@ -116,4 +121,29 @@
   overflow: hidden;
   content: "";
   position: absolute;
+}
+
+.btn-cover {
+  width: 100%;
+  @include centered();
+  gap: toRem(32);
+}
+
+button {
+  align-self: center;
+  padding: toRem(12) toRem(24);
+  background-color: var(--main-brown);
+  color: #f5f5f5;
+  font-size: 1rem;
+  opacity: 0.8;
+  border-radius: toRem(4);
+
+  @include fade-hover(opacity, 200ms, 1);
+
+  &.quit {
+    border: 2px solid var(--main-brown);
+    background-color: var(--green-10);
+    color: var(--main-brown);
+    font-weight: 500;
+  }
 }
