--- a/src/app/anime-list/anime-list.component.scss
+++ b/src/app/anime-list/anime-list.component.scss
@@ -6,9 +6,14 @@
 
 h2 {
   width: 100%;
-  font-size: 1.5rem;
+  font-size: 2rem;
   font-weight: 700;
   margin: 2rem 0 3rem;
+
+  @media (min-width: $sm) {
+    font-size: 2.5rem;
+    margin: 2rem 0 4rem;
+  }
 }
 
 ul {
@@ -34,6 +39,13 @@ li {
   cursor: pointer;
   background-color: var(--main-brown);
   border-radius: toRem(8);
+  transition: transform 0.2s ease-out;
+
+  @media (hover: hover) {
+    &:hover {
+      transform: scale(1.05);
+    }
+  }
 
   @media screen and (min-width: toRem(540)) {
     width: calc(50% - toRem(16));
