added sound effect

--- a/src/app/win/win.component.html
+++ b/src/app/win/win.component.html
@@ -25,4 +25,4 @@
   <div class="link" routerLink="..">Select another image</div>
 </div>
 
-<audio #audio src="../../assets/audio/applause.mp3" autoplay></audio>
+<!-- <audio #audio src="../../assets/audio/applause.mp3" autoplay></audio> -->
